fix: make sure scrollbars don't overflow track

--- a/packages/simplebar/src/simplebar.css
+++ b/packages/simplebar/src/simplebar.css
@@ -108,6 +108,7 @@
     right: 0;
     bottom: 0;
     pointer-events: none;
+    overflow: hidden;
 }
 
 [data-simplebar].simplebar-dragging .simplebar-track {
